# essential-robot-framework

./: README.md  pyproject.toml  requirements.txt
examples/: add-todo.robot  drag-n-drop.robot  dropdowns-etc.robot  javascript-alerts.robot  json-placeholder-api.robot  login-logout.robot  pagination.robot  purchase-flow.robot  search-wikipedia.robot  typeahead-search.robot
notes/: index.md
scripts/best-practises-for-writing-scripts/: calculate-vat.robot  environment.robot  global-variables.robot  linear-script.robot  local-variables.robot  optional-parameter.robot  refactored-script.robot  setup-teardown.robot  simple-keywords.robot  test-template.robot  variable-length-parameters.robot  variable-types.robot
scripts/control-structures/: conditional-execution.robot  continue-and-break.robot  for-loop.robot  load-more.robot  numeric-loop.robot  safe-division.robot  test-scores.robot
scripts/creating-scripts/: add-todo.robot  bing-search.robot
scripts/gherkin/: gherkin-todomvc.robot
scripts/introduction-to-robot-framework/: check-book-price.robot
scripts/pytest/: test_api.py  test_bank_account.py  test_search_ddg.py
scripts/robot-framework-libraries/: create-note.robot  dialogs.robot  screenshot.robot  validate-api-response.robot
scripts/running-tests/: display-messages.robot  interprocess-communication.robot  locking.robot  run-tests.bat
scripts/testing-apis/: delete-request.robot  form-data.robot  get-request.robot  missing-security-token.robot  post-request.robot  session-cookie-authentication.robot
scripts/testing-databases/: record-insertion.robot  (+1 more)
(+99 files in other folders)
